[project]
name = "mediaflow-proxy"
version = "2.1.9"
description = "A high-performance proxy server for streaming media, supporting HTTP(S), HLS, and MPEG-DASH with real-time DRM decryption."
authors = [{ name = "mhdzumair", email = "mhdzumair@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["proxy", "media", "streaming", "hls", "dash", "drm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "httpx[socks,zstd]",
    "tenacity",
    "xmltodict",
    "pydantic-settings",
    "gunicorn",
    "pycryptodome",
    "uvicorn",
    "tqdm",
    "aiofiles",
    "beautifulsoup4",
    "lxml",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/mhdzumair/mediaflow-proxy"
Repository = "https://github.com/mhdzumair/mediaflow-proxy"
Documentation = "https://github.com/mhdzumair/mediaflow-proxy#readme"

[project.scripts]
mediaflow-proxy = "mediaflow_proxy.main:run"

[dependency-groups]
dev = [
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["mediaflow_proxy/**", "LICENSE", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["mediaflow_proxy"]

[tool.black]
line-length = 120
