[project]
name = "mediaflow-proxy"
version = "2.4.1"
description = "A high-performance proxy server for streaming media, supporting HTTP(S), HLS, and MPEG-DASH with real-time DRM decryption."
authors = [{ name = "mhdzumair", email = "mhdzumair@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
keywords = ["proxy", "media", "streaming", "hls", "dash", "drm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "aiohttp",
    "aiohttp-socks",
    "tenacity",
    "xmltodict",
    "pydantic-settings",
    "gunicorn",
    "pycryptodome",
    "uvicorn",
    "tqdm",
    "aiofiles",
    "beautifulsoup4",
    "lxml",
    "psutil",
    "curl_cffi",
    "telethon>=1.42.0",
    "cryptg>=0.4.0",
    "redis[hiredis]>=5.0.0",
    "av>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/mhdzumair/mediaflow-proxy"
Repository = "https://github.com/mhdzumair/mediaflow-proxy"
Documentation = "https://github.com/mhdzumair/mediaflow-proxy#readme"

[project.scripts]
mediaflow-proxy = "mediaflow_proxy.main:run"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["mediaflow_proxy/**", "LICENSE", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["mediaflow_proxy"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
